Refactor code and docs
- Change .env variables: remove Domain and Port, add Base URL
- Add a new ErrorResp struct for error message instead of hashmap
- Add a new countURLResp struct for HandleCountURL response
- Update Swagger docs
